# disaster-env

./: .dockerignore  .env.example  .gitignore  Blog.md  Dockerfile  LICENSE  README.md  client.py  game.html  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  scenario_generator.py  start.bat  start.sh
server/: __init__.py  app.py  disaster_env_environment.py
supporting_content/: visualizer.html
supporting_content/baseline/: baseline.ipynb  baseline_log.json  baseline_results.json
supporting_content/sft/: sft_eval.ipynb  sft_log.json  sft_results.json
training_data/: combined_training.jsonl  run_easy_11steps_20260425_035632.jsonl  run_easy_5steps_20260425_015813.jsonl  run_easy_6steps_20260425_001637.jsonl  run_easy_6steps_20260425_011554.jsonl  run_easy_6steps_20260425_014056.jsonl  run_easy_6steps_20260425_020116.jsonl  run_easy_6steps_20260425_021732.jsonl  run_easy_6steps_20260425_063237.jsonl  run_easy_7steps_20260425_001012.jsonl  run_easy_7steps_20260425_002943.jsonl  run_easy_7steps_20260425_015535.jsonl  run_easy_7steps_20260425_020413.jsonl  run_easy_7steps_20260425_020907.jsonl  run_easy_7steps_20260425_055901.jsonl  run_easy_8steps_20260424_233047.jsonl  run_easy_8steps_20260425_010059.jsonl  run_easy_8steps_20260425_014654.jsonl  run_easy_8steps_20260425_031613.jsonl  run_easy_9steps_20260425_022009.jsonl  run_easy_9steps_20260425_034604.jsonl  run_easy_9steps_20260425_062413.jsonl  run_medium_16steps_20260425_060112.jsonl  run_medium_22steps_20260425_062707.jsonl  run_medium_23steps_20260425_002446.jsonl
